--- a/_sass/resume.scss
+++ b/_sass/resume.scss
@@ -17,7 +17,7 @@ $other_bg: rgba(238, 238, 238, .2);
 html {
   width: 100%;
   font-size: 14px;
-  padding: 1.5em;
+  padding: 1.2em;
   background-color: $bg_color;
   overflow-y: scroll;
   @include box-sizing();
@@ -28,10 +28,10 @@ html {
 }
 
 body {
-  max-width: 75em;
+  max-width: 78m;
   text-align: center;
   margin: 0 auto;
-  padding: 1em;
+  padding: 1.2em;
   background-color: $paper_color;
   border: 1px solid #dedede;
   color: $default_color;
@@ -66,7 +66,7 @@ a {
 header,
 main {
   display: block;
-  width: 75%;
+  width: 88%;
   margin: auto;
 }
 
@@ -162,7 +162,7 @@ section {
   h2 {
     width: $subject-width - 1%;
     margin-right: 1%;
-    font-size: 1.3em;
+    font-size: 1.2em;
     text-align: right;
     font-weight: 900;
     color: #6ae;
@@ -195,7 +195,7 @@ section {
   .summary {
     font-size: 1.1em;
     margin: .3em 0 0 1em;
-    line-height: 1.5em;
+    line-height: 2em;
     font-weight: 600;
   }
 
@@ -284,9 +284,9 @@ code {
 
 .detail {
   font-size: 1.05em;
-  margin: .5em 0;
-  text-indent: 1.2em;
-  line-height: 1.4em;
+  margin: 1em 0;
+  text-indent: 1em;
+  line-height: 1.8em;
   font-weight: 400;
   background: $detail_bg;
   word-wrap: break-word;
