--- a/_sass/resume.scss
+++ b/_sass/resume.scss
@@ -171,7 +171,7 @@ section {
     &:lang(zh) {
       font-size: 1.65em;
       padding-right: 1%;
-      width: $subject-width * 3 / 4; // min-width: 5em;      
+      width: $subject-width * 3 / 4; // min-width: 5em;
     }
   }
 
@@ -196,6 +196,8 @@ section {
     margin: .3em 0 0 1em;
     line-height: 1.5em;
     font-weight: 600;
+    list-style: none;
+    list-style-type: none;
   }
 
   .items {
