--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -97,9 +97,9 @@ layout: default
                 {% endfor %}
               </div>
               {% endif %}
-              {% if content.duration.size > 0 %}
+              <!-- {% if content.duration.size > 0 %}
                <i class="time">{{ content.duration }}</i>
-              {% endif %}
+              {% endif %} -->
             </div>
 
             {% if content.detail.size > 0 %}
