--- a/_sass/resume.scss
+++ b/_sass/resume.scss
@@ -242,12 +242,12 @@ section {
     margin: 0;
     font-size: 1.2em;
     color: #858585;
-    text-align: right;
     font-weight: 700;
   }
 
   .time {
     text-align: right;
+    border: none;
   }
 }
 
