--- a/_sass/resume.scss
+++ b/_sass/resume.scss
@@ -166,7 +166,7 @@ section {
     font-weight: 900;
     color: #6ae;
     text-transform: uppercase;
-    vertical-align: top;
+    vertical-align: middle;
 
     &:lang(zh) {
       font-size: 1.65em;
