--- a/_sass/resume.scss
+++ b/_sass/resume.scss
@@ -278,9 +278,9 @@ code {
 
   code {
     color: #999;
-    margin-left: .2em;
+    margin-left: .5em;
     background: rgba(249, 249, 252, .5);
-    font-size: 1.1em;
+    // font-size: 1.1em;
     padding: .1em;
   }
 }
