--- a/_sass/resume.scss
+++ b/_sass/resume.scss
@@ -287,7 +287,8 @@ code {
 
 .detail {
   font-size: 1.05em;
-  margin: 1em 0;
+  // margin: 1em 0;
+  margin: .3em 0 0 .5em;
   text-indent: 1em; //缩进
   line-height: 1.8em;
   font-weight: 400;
